# trading23

./: .gitignore  Cargo.toml  trade_balance.csv
backtesting/: pyproject.toml
backtesting/src/: main.py  pandas_analysis.py  polars_analysis.py  topix_analysis.py  trade_balance.py
src/: analysis.rs  config.rs  database.rs  gmo_coin.rs  jquants.rs  line_notify.rs  main.rs  markdown.rs  my_db.rs  my_error.rs  my_file_io.rs  notion.rs
src/analysis/: backtesting.rs  backtesting_topix.rs  live.rs  stocks_afternoon.rs  stocks_daytrading.rs  stocks_window.rs
src/database/: stocks.rs  stocks_ohlc.rs
src/gmo_coin/: backtesting.rs  fx_private.rs  fx_public.rs
src/jquants/: backtesting.rs  fetcher.rs  live.rs
