[package]
name = "trading23"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
log = "0.4"
env_logger = "0.10.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4.31", features = ["alloc"] }
cli-candlestick-chart = "0.3"
csv = "1.3.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
clap = { version = "4.4.11", features = ["derive"] }
exitcode = "1.1.2"
ring = "0.17.7"
hex = "0.4.3"
polars = { version = "0.35.4", features = ["lazy"] }
statrs = "0.16"
